Make reports on root directory
Moved system to work from root directory again.

It seems that Overleaf is unable to work with subdirectories properly.

Reference: See https://twitter.com/overleaf/status/1589171328027955200

--- a/.github/workflows/compile-technical-resume.yml
+++ b/.github/workflows/compile-technical-resume.yml
@@ -12,19 +12,19 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: report1.tex
-          working_directory: ./practica1
+          working_directory: ./
       - name: Compile Practica2 document
         uses: xu-cheng/latex-action@v2
         with:
           root_file: report2.tex
-          working_directory: ./practica2
+          working_directory: ./
       - uses: actions/upload-artifact@v2
         name: Upload artifact
         with:
           name: Report1
-          path: ./practica1/report1.pdf
+          path: ./report1.pdf
       - uses: actions/upload-artifact@v2
         name: Upload artifact
         with:
           name: Report2
-          path: ./practica2/report2.pdf
+          path: ./report2.pdf
